# side-stream

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml
db/: schema.sql
docker/: docker-compose.yml
docs/: DEPLOY.md
src/side_stream/: __init__.py  delivery.py  llm_enrichment.py  llm_validator.py  main.py  observability.py  quality_snapshot.py  settings.py  signal_pusher.py  stripe_webhooks.py  trigger_engine.py  webhook_security.py
src/side_stream.egg-info/: SOURCES.txt  requires.txt  top_level.txt
src/side_stream/api/: __init__.py  analytics.py  app.py  dashboard.py  landing.py
tests/: test_delivery.py  test_landing.py  test_llm_enrichment.py  test_llm_validator.py  test_observability.py  test_quality_snapshot.py  test_signal_pusher.py  test_stripe_webhooks.py  test_trigger_engine.py  test_webhook_security.py
