[project]
name = "side-stream"
version = "0.1.0"
description = "Streams Edge — paid TG signal channel + sub-second webhook alerts SaaS on Chainlink Data Streams"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "asyncpg>=0.29",
    "redis>=5.0",
    "httpx>=0.27",
    "structlog>=24.1",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-telegram-bot>=20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "S", "BLE"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
